# pystuff

./: test_all.sh
algs/: .gitignore  Makefile  main.py  pyproject.toml
algs/algs/: astar.py  prime_factors.py  primes.py  stuff.py  tst.py  uf.py  union_find.py
algs/algs_tests/: prime_factors_test.py  primes_test.py  stuff_test.py  test_astar.py  tst_test.py  uf_bench_test.py  uf_test.py
aoc/: .gitignore  Makefile  algs  pyproject.toml  pytest.ini  readme.md  test_tmp.py  tmp.py
aoc/2015/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  2.py  2015_1.py  2015_10.py  2015_11.py  2015_12.py  2015_13.py  2015_14.py  2015_15.py  2015_16.py  2015_17.py  2015_18.py  2015_2.py  2015_3.py  2015_4.py  2015_5.py  2015_6.py  2015_9.py  3.py  4.py  5.py  6.py  9.py
aoc/2016/: 01.py  03.py  04.py  2016_01.py  2016_03.py  2016_04.py  2016_05.py  2016_06.py  2016_07.py  2016_08.py  2016_09.py  2016_10.py  2016_11.py  2016_12.py  2016_13.py  2016_14.py  2016_15.py  2016_16.py  2016_17.py
aoc/2024/: 2024_6.py  6.py
aoc/utils/: assertions.py  astar.py  basic.py  chargrid.py  grid.py  hash.py  input.py  maths.py  pipe.py  pipefriends.py  test_astar.py
aoc/utils_tests/: basic_test.py  maths_test.py  pipe_test.py
project_template/: .gitignore  Makefile  main.py  readme.md
project_template/mylib_tests/: stuff_test.py
