[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "advent-of-code-data>=2.1.0",
    "numpy>=2.2.6",
    "pipe>=2.2",
    "pyperclip>=1.11.0",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.14.8",
]
